--- a/style/media/_media.scss
+++ b/style/media/_media.scss
@@ -62,10 +62,16 @@ object {
 		border-radius: 8px;
 	}
 
-	&.alignfull img {
-		max-height: 500px;
-		max-height: 70vh;
-		object-fit: cover;
-		object-position: top;
+	&.alignfull {
+		margin-left: calc(50% - 50vw);
+		margin-right: calc(50% - 50vw);
+		max-width: none;
+
+		img {
+			width: 100%;
+			max-height: 500px;
+			max-height: 70vh;
+			object-fit: cover;
+		}
 	}
 }
